fixeing the cutoff bootstrap columns and adding the stage project to my projects

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -25,8 +25,19 @@
       line-height: 1;
       margin-bottom: 1rem;
     }
+    .card-columns .card {
+      display: inline-block;
+    }
     .card-columns {
       column-count: 2;
+    }
+    .card-title {
+      line-height: 1.2rem;
+      font-weight: 900;
+    }
+    .card-body p {
+      font-size: 0.5rem;
+      margin-bottom: 0.5rem;
     }
   }
 
