--- a/scss/main.scss
+++ b/scss/main.scss
@@ -166,6 +166,11 @@ main {
   transition: 0.9s;
 }
 
+.card-body p {
+  font-size: 1rem;
+  font-weight: 100;
+  margin-bottom: 5px;
+}
 .card-title {
   margin-bottom: 0.75rem;
   font-size: 1rem;
@@ -226,6 +231,7 @@ main {
   @extend .btn;
   background: lighten($primary-color, 50);
   color: #333333;
+  margin-top: 15px;
 }
 
 #main-footer {
